resources/clusters/production/rhobsp01euw1/gateway/bundle/proxy-rhobs-gateway-Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/instance: rhobs
    app.kubernetes.io/name: rhobs-gateway
    app.kubernetes.io/part-of: rhobs
    app.kubernetes.io/version: 9fc0a6990fbc9cdcd81a69fc97aba8c3ccd66f8c
  name: rhobs-gateway
  namespace: rhobs-production
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - appProtocol: h2c
    name: grpc-public
    port: 8090
    protocol: TCP
    targetPort: 8090
  - appProtocol: http
    name: internal
    port: 8081
    protocol: TCP
    targetPort: 8081
  - appProtocol: http
    name: public
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/component: api
    app.kubernetes.io/instance: rhobs
    app.kubernetes.io/name: rhobs-gateway
    app.kubernetes.io/part-of: rhobs
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
